--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "lucide-vue-next": "^0.525.0",
     "pinia": "^3.0.3",
+    "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
